# pibic

./: .env  Dockerfile  README.md  __init__.py  docker-compose.yml  index.html  init_db_paciente.sql  main.py  pyproject.toml
app/: __init__.py  config.py  creare_db.py
app/controllers/: controlerpatient.py  user_controller.py
app/models/: paciente.py
app/predictions/: predict.py
controllers/: controlerpatient.py  controller_user.py
database/: conn.py
database/comands/: pacienteService.py
entities/: paciente.py
patient/: patientEntity.py  predict.py
patient/controllers/: controlerpatient.py
patient/models/: paciente.py
patient/predictions/: predict.py
patient/services/: service.py
patient/services/impl/: service_impl.py
predictions/: predict.py
shareds/database/comands/: pacienteService.py
